--- a/src/app/nav-bar2/nav-bar2.component.html
+++ b/src/app/nav-bar2/nav-bar2.component.html
@@ -826,7 +826,7 @@
 
             <!-- chat - box -->
 <!--            <app-chat-message></app-chat-message>-->
-            <app-messenger></app-messenger>
+<!--            <app-messenger></app-messenger>-->
             <!-- end chat box -->
 
 
