--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -25,7 +25,7 @@
 <!--                                                <ul class="more-dropdown">-->
 <!--                                                    <li><a href="setting.html" title="">Update Profile Photo</a></li>-->
 <!--                                                    <li><a href="setting.html" title="">Update Header Photo</a></li>-->
-<!--                                                    <li><a href="setting.html" title="">Account Settings</a></li>-->
+<!--                                                    <li><a href="setting.html" title="">Accounts Settings</a></li>-->
 <!--                                                    <li><a href="support-and-help.html" title="">Find Support</a></li>-->
 <!--                                                    <li><a class="bad-report" href="#" title="">Report Profile</a></li>-->
 <!--                                                    <li><a href="#" title="">Block Profile</a></li>-->
