--- a/src/app/new/new.component.html
+++ b/src/app/new/new.component.html
@@ -463,7 +463,7 @@
       <label for="switch22" data-off-label="OFF"></label>
     </div>
     <div class="setting-row">
-      <span>Notification sound</span>
+      <span>Notifications sound</span>
       <input type="checkbox" id="switch33" />
       <label for="switch33"  data-off-label="OFF"></label>
     </div>
@@ -478,7 +478,7 @@
       <label for="switch55" data-off-label="OFF"></label>
     </div>
   </form>
-  <h4 class="panel-title">Account Setting</h4>
+  <h4 class="panel-title">Accounts Setting</h4>
   <form method="post">
     <div class="setting-row">
       <span>Sub users</span>
