--- a/src/app/nav-bar2/nav-bar2.component.html
+++ b/src/app/nav-bar2/nav-bar2.component.html
@@ -233,93 +233,11 @@
                 <li><a routerLink="/home" title="Home" data-ripple=""><i class="fa fa-home"></i></a></li>
                 <li>
                     <a href="#" title="Friend Requests" data-ripple="">
-                        <i class="fa fa-user"></i><em class="bg-red">5</em>
+                        <i class="fa fa-user"></i><em class="bg-red" *ngIf="listPending.length > 0">{{listPending.length}}</em>
                     </a>
+<!--                    ket ban o day-->
                     <div class="dropdowns">
-                        <span>5 New Requests <a href="#" title="">View all Requests</a></span>
-                        <ul class="drops-menu">
-                            <li>
-                                <div>
-                                    <figure>
-                                        <img src="../../assets/images/resources/thumb-2.jpg" alt="">
-                                    </figure>
-                                    <div class="mesg-meta">
-                                        <h6><a href="#" title="">Loren</a></h6>
-                                        <span><b>Amy</b> is mutule friend</span>
-                                        <i>yesterday</i>
-                                    </div>
-                                    <div class="add-del-friends">
-                                        <a href="#" title=""><i class="fa fa-heart"></i></a>
-                                        <a href="#" title=""><i class="fa fa-trash"></i></a>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div>
-                                    <figure>
-                                        <img src="../../assets/images/resources/thumb-3.jpg" alt="">
-                                    </figure>
-                                    <div class="mesg-meta">
-                                        <h6><a href="#" title="">Tina Trump</a></h6>
-                                        <span><b>Simson</b> is mutule friend</span>
-                                        <i>2 days ago</i>
-                                    </div>
-                                    <div class="add-del-friends">
-                                        <a href="#" title=""><i class="fa fa-heart"></i></a>
-                                        <a href="#" title=""><i class="fa fa-trash"></i></a>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div>
-                                    <figure>
-                                        <img src="../../assets/images/resources/thumb-4.jpg" alt="">
-                                    </figure>
-                                    <div class="mesg-meta">
-                                        <h6><a href="#" title="">Andrew</a></h6>
-                                        <span><b>Bikra</b> is mutule friend</span>
-                                        <i>4 hours ago</i>
-                                    </div>
-                                    <div class="add-del-friends">
-                                        <a href="#" title=""><i class="fa fa-heart"></i></a>
-                                        <a href="#" title=""><i class="fa fa-trash"></i></a>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div>
-                                    <figure>
-                                        <img src="../../assets/images/resources/thumb-5.jpg" alt="">
-                                    </figure>
-                                    <div class="mesg-meta">
-                                        <h6><a href="#" title="">Dasha</a></h6>
-                                        <span><b>Sarah</b> is mutule friend</span>
-                                        <i>9 hours ago</i>
-                                    </div>
-                                    <div class="add-del-friends">
-                                        <a href="#" title=""><i class="fa fa-heart"></i></a>
-                                        <a href="#" title=""><i class="fa fa-trash"></i></a>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div>
-                                    <figure>
-                                        <img src="../../assets/images/resources/thumb-1.jpg" alt="">
-                                    </figure>
-                                    <div class="mesg-meta">
-                                        <h6><a href="#" title="">Emily</a></h6>
-                                        <span><b>Amy</b> is mutule friend</span>
-                                        <i>4 hours ago</i>
-                                    </div>
-                                    <div class="add-del-friends">
-                                        <a href="#" title=""><i class="fa fa-heart"></i></a>
-                                        <a href="#" title=""><i class="fa fa-trash"></i></a>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                        <a href="friend-requests.html" title="" class="more-mesg">View All</a>
+                        <app-friend-requests (getPending)="onChange($event)" [listPending]="listPending"></app-friend-requests>
                     </div>
                 </li>
                 <li>
@@ -757,10 +675,9 @@
         </div>
     </div><!-- right sidebar user chat -->
 
-<<<<<<< HEAD
 
 <!--     popup-->
-
+<!--day la modal notification-->
      <div class="modal fade" id="blog-popup">
          <app-one-post [posting]="posting"></app-one-post>
      </div>
