--- a/src/app/nav-bar2/nav-bar2.component.html
+++ b/src/app/nav-bar2/nav-bar2.component.html
@@ -221,9 +221,9 @@
 <!--			    </span>-->
 <!--            </div>-->
             <div class="top-search">
-                <form method="post" class="">
-                    <input type="text" placeholder="Search People, Pages, Groups etc">
-                    <button data-ripple><i class="ti-search"></i></button>
+                <form (ngSubmit)="search()">
+                    <input type="text" placeholder="Search People, Status" name="searchName" [(ngModel)]="searchName">
+                    <button type="submit" data-ripple><i class="ti-search"></i></button>
                 </form>
             </div>
             <div class="page-name">
