--- a/src/app/chat-message/chat-message.component.html
+++ b/src/app/chat-message/chat-message.component.html
@@ -44,13 +44,13 @@
                 <div class="mesge-area">
                     <ul  class="conversations">
                         <li *ngFor="let mess of messageDetail">
-                            <div [class] = "mess.nameSender === nameAccount ? 'me' : 'you'">
-                                <figure><img [src]="mess.nameSender === nameAccount ? avatarAccount : avatarAccountChat" height="45"
+                            <div [class] = "mess.idGuest.toString() === idAccount.toString() ? 'me' : 'you'">
+                                <figure><img [src]="mess.idGuest.toString() === idAccount.toString() ? avatarAccount : chatMessageAccount.avatar" height="45"
                                              width="45"/></figure>
                                 <div class="text-box">
                                     <p>{{mess.content}}</p>
-                                    <span><i class="ti-check"></i><i
-                                            class="ti-check"></i>{{mess.dateSend}} </span>
+                                    <span>{{mess.dateSend}} <i class="ti-check"></i><i
+                                            class="ti-check"></i></span>
                                 </div>
                             </div>
                         </li>
