--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -64,10 +64,10 @@
                                         <div class="col-lg-10 col-md-9">
                                             <ul class="profile-menu">
                                                 <li *ngIf="check == false">
-                                                    <button *ngIf="checkRelationship==0 && pending == 0"><a (click)="addFriend()">Kết bạn</a> </button>
-                                                    <button *ngIf="checkRelationship==0 && pending == 1"><a (click)="agree()">Đồng ý</a> </button>
-                                                    <button *ngIf="checkRelationship==0 && pending == 1"><a (click)="defuse()">Từ chối</a> </button>
-                                                    <button *ngIf="checkRelationship==2"><a (click)="deleteFriend()">Xóa Bạn</a> </button>
+                                                    <button *ngIf="checkRelationship==0 && pending == 0" mat-flat-button color="warn"><a (click)="addFriend()">Kết bạn</a> </button>
+                                                    <button *ngIf="checkRelationship==0 && pending == 1" mat-flat-button color="warn"><a (click)="agree()">Đồng ý</a> </button>
+                                                    <button *ngIf="checkRelationship==0 && pending == 1" mat-flat-button color="warn"><a (click)="defuse()">Từ chối</a> </button>
+                                                    <button *ngIf="checkRelationship==2" mat-flat-button color="warn"><a (click)="deleteFriend()">Xóa Bạn</a> </button>
                                                 </li>
                                                 <li>
                                                     <a class="" routerLink="/home/profile/{{account.id}}">Timeline</a>
