--- a/src/app/notification/notification/notification.component.html
+++ b/src/app/notification/notification/notification.component.html
@@ -8,13 +8,28 @@
                 </figure>
                 <div class="mesg-meta">
                     <h6>{{notification.sender.name}}</h6>
-
-                    <div *ngIf="notification.status; else elseBlock">
-                        <span> {{notification.content}}</span>
+                    <div *ngIf="notification.type === 2">
+                        <div *ngIf="notification.status; else elseBlock">
+                            <span> {{notification.content}}</span>
+                            <span *ngIf="notification.posting.owner.id === currentId" >bạn</span>
+                            <span *ngIf="notification.posting.owner.id !== notification.account.id" >{{notification.posting.owner.name}}</span>
+                        </div>
+                        <ng-template #elseBlock>
+                            <strong> {{notification.content}}</strong>
+                            <strong *ngIf="notification.posting.owner.id === currentId" >bạn</strong>
+                            <strong *ngIf="notification.posting.owner.id !== notification.account.id" >{{notification.posting.owner.name}}</strong>
+                        </ng-template>
                     </div>
-                    <ng-template #elseBlock>
-                        <strong> {{notification.content}}</strong>
-                    </ng-template>
+                    <div *ngIf="notification.type === 1">
+                        <div *ngIf="notification.status; else elseBlock">
+                            <span> {{notification.content}}</span>
+                        </div>
+                        <ng-template #elseBlock>
+                            <strong> {{notification.content}}</strong>
+                        </ng-template>
+                    </div>
+
+
                     <i>{{notification.date}}</i>
                 </div>
 <!--                <a (click)="delete(notification.id)" style="right: 0" title=""><i class="fa fa-trash"></i></a>-->
