--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -1,5 +1,4 @@
-<app-nav-bar2></app-nav-bar2>
-<div class="theme-layout">
+<div class="messenger-ba">
     <section>
         <div class="gap2 no-gap gray-bg">
             <div class="container-fluid no-padding">
@@ -86,7 +85,7 @@
                         </div>
 
                         <!-- showchat message -->
-                            <app-chat-message [chatMessageAccount]="messageAccount" [messageDetail]="messageDetail" [idAccountChat]="idAccountChat"></app-chat-message>
+                            <app-chat-message [chatMessageAccount]="messageAccount" [messageDetail]="messageDetail" ></app-chat-message>
                     </div>
                 </div>
             </div>
