--- a/src/app/new/new.component.html
+++ b/src/app/new/new.component.html
@@ -287,7 +287,7 @@
                     <h4 class="widget-title">Your page</h4>
                     <div class="your-page">
                       <figure>
-                        <a href="#" title=""><img src="../../assets/images/resources/friend-avatar9.jpg" alt=""></a>
+                        <a href="#" title=""><img [src] ="account.avatar" alt="" style="height: 45px ; width: 45px"></a>
                       </figure>
                       <div class="page-meta">
                         <a href="#" title="" class="underline">My Creative Page</a>
@@ -386,23 +386,6 @@
                       <img src="../../assets/images/clock.png" alt="">
                     </div>
                   </div><!-- explore events -->
-                  <div class="widget">
-                    <h4 class="widget-title">Profile intro</h4>
-                    <ul class="short-profile">
-                      <li>
-                        <span>about</span>
-                        <p>Hi, i am jhon kates, i am 32 years old and worked as a web developer in microsoft </p>
-                      </li>
-                      <li>
-                        <span>fav tv show</span>
-                        <p>Sacred Games, Spartcus Blood, Games of Theron </p>
-                      </li>
-                      <li>
-                        <span>favourit music</span>
-                        <p>Justin Biber, Shakira, Nati Natasah</p>
-                      </li>
-                    </ul>
-                  </div><!-- profile intro widget -->
                   <div class="widget stick-widget">
                     <h4 class="widget-title">Recent Links <a title="" href="#" class="see-all">See All</a></h4>
                     <ul class="recent-links">
