--- a/src/app/profile/time-line/time-line.component.html
+++ b/src/app/profile/time-line/time-line.component.html
@@ -285,7 +285,7 @@
                                         <h4 class="widget-title">Your page</h4>
                                         <div class="your-page">
                                             <figure>
-                                                <a href="#" title=""><img src="../../assets/images/resources/friend-avatar9.jpg" alt=""></a>
+                                                <a href="#" title=""><img [src]="account.avatar" alt="" style="width: 45px ; height: 45px"></a>
                                             </figure>
                                             <div class="page-meta">
                                                 <a href="#" title="" class="underline">My Creative Page</a>
@@ -372,23 +372,6 @@
                                             </div>
                                         </div>
                                     </div><!-- page like widget -->
-                                    <div class="widget">
-                                        <h4 class="widget-title">Profile intro</h4>
-                                        <ul class="short-profile">
-                                            <li>
-                                                <span>about</span>
-                                                <p>Hi, i am jhon kates, i am 32 years old and worked as a web developer in microsoft </p>
-                                            </li>
-                                            <li>
-                                                <span>fav tv show</span>
-                                                <p>Sacred Games, Spartcus Blood, Games of Theron </p>
-                                            </li>
-                                            <li>
-                                                <span>favourit music</span>
-                                                <p>Justin Biber, Shakira, Nati Natasah</p>
-                                            </li>
-                                        </ul>
-                                    </div>
                                     <div class="widget">
                                         <div class="banner medium-opacity purple">
                                             <div class="bg-image"
