--- a/src/app/form-login/login/login.component.html
+++ b/src/app/form-login/login/login.component.html
@@ -9,8 +9,8 @@
                             <figure><img style="width: 200px; height: 200px;"  src="../../assets/images/logosIShareLife2/logoIShareLifeMain.png" alt=""></figure>
                             <h1>Welcome to the iShareLife</h1>
                             <p>
-                                iShareLife is a social network template that can be used to connect people. use this
-                                template for multipurpose social activities like job, dating, posting, bloging and much
+                                iShareLife is a social network application that can be used to connect people. use our social
+                                for multipurpose social activities like job, dating, posting, bloging and much
                                 more. Now join & Make Cool Friends around the world !!!
                             </p>
 
@@ -104,7 +104,7 @@
                                     <mat-icon color="primary" matSuffix>login</mat-icon>
                                 </button>
                             </form>
-                            <a class="with-smedia google" href="#" title="" data-ripple=""><i
+                            <a class="with-smedia google" href="http://localhost:8080/oauth2/authorization/google" title="" data-ripple=""><i
                                     class="fa fa-google-plus"></i></a>
                             <span>don't have an account? <a class="we-account underline" routerLink="/register"
                                                             title="">register now</a></span>
